# nonex

./: LICENSE  README.md  pyproject.toml
nonex/: __init__.py
tests/: nonex_test.py
